[package]
name = "Intra-Lightning"
version = "1.0.5"
edition = "2021"

[dependencies]
intra-lightning = "1.0.2"
ldk = "0.0.119"
bdk = "0.29.0"
bitcoin = "0.31"
secp256k1 = { version = "0.13", features = ["rand"] }
lightning-invoice = { version = "0.25.0", path = "../lightning-invoice" }
lightning-persister = { version = "0.0.119", path = "../lightning-persister" }

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
bitcoind = { version = "0.28.1", features = [ "22_0" ] }
serial_test = "0.6.0"
